<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Redmine</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="google">google</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="see_password">See password</string>
    <string name="register_account">Register account</string>
    <string name="donor_data">Donor Data</string>
    <string name="halo">Hello %s, we need some information from you. Pleas fill it properly</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="blood_type">Blood Type</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="ab">AB</string>
    <string name="o">O</string>
    <string name="rhesus">Rhesus</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="dont_know">Unknown</string>
    <string name="phone_number">Phone Number</string>
    <string name="number">+62</string>
    <string name="by_inputing_phone_number">By inputing phone number, you agree to get any information regarding blood donor through SMS or whatsapp</string>
    <string name="continuee">Continue</string>
    <string name="city_residence">City of Residence</string>
    <string name="province_residence">Province of Residence</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="select_city">Select City</string>
    <string name="select_province">Select Province</string>
    <string name="have_you_donate">Have you donated before in the last 3 months</string>
    <string name="you_can_only_donate">You can only donate 3 months after you last blood donation. Please specify the date if you have donated in the last 3 months</string>
    <string name="have_you_had_covid">Have you ever had Covid-19?</string>
    <string name="you_can_only_donate_covid_ver">You can only donate 3 months after you recover from Covid-19. Please specify the recovery date if you just recovered in the last 3 months</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pick_date">Pick date</string>
    <string name="last_blood_donation">Last blood donation: %1$s/%2$s/%3$s</string>
    <string name="label_last_blood_donation">Last blood donation</string>
    <string name="recovery_date">Recovery date: %1$s/%2$s/%3$s</string>
    <string name="date_format">%1$s/%2$s/%3$s</string>
    <string name="finish">Finish</string>
    <string name="donate_blood">Donate blood</string>
    <string name="look_for_donors">Look for blood donors</string>
    <string name="create_donor_req">Create Donor Request</string>
    <string name="home">Home</string>
    <string name="chatbot">Chatbot</string>
    <string name="schedule">schedule</string>
    <string name="profile">Profile</string>
    <string name="did_you_know">Did you know?</string>
    <string name="hello">Hello</string>
    <string name="blood_donation">Blood Donation</string>
    <string name="unverified_account">Unverified account</string>
    <string name="verified_account">Verified account</string>
    <string name="last_time_donation">Last time donation</string>
    <string name="can_donate_again">Can donate again</string>
    <string name="blood_donation_events">Blood Donation Events</string>
    <string name="filter">filter</string>
    <string name="blood_donor_req">Blood Donor Request</string>
    <string name="blood_type_compatible">Your blood type is compatible</string>
    <string name="blood_type_not_compatible">Your blood type is not compatible</string>
    <string name="blood_type_may_be_compatible">Your blood type may be compatible</string>
    <string name="donor_req">Donor Request</string>
    <string name="posted_days_ago">Posted %1$s days ago at %2$s </string>
    <string name="posted">Posted %1$s at %2$s</string>
    <string name="patient_name">Patient Name</string>
    <string name="number_blood_bag">Number of Blood Bags Needed</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="contact_person">Contact Person</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="you_can_not_donate">You can not donate yet. Make sure you fulfill all the requirements.</string>
    <string name="make_sure_meet_requirements">Make sure you meet the requirements before donating</string>
    <string name="more_info">Click here for more information</string>
    <string name="yes_im_sure">Yes, I am sure</string>
    <string name="copy">Copy</string>
    <string name="call">Call</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="requirements_list">
        \n <li>Be at least 17 years old</li>
        \n <li>Be in good health generally and feel well on the day of donation</li>
        \n <li>Weigh at least 110 pounds</li>
        \n <li>If you have received the COVID vaccine, please wait 3 days before attempting to donate</li>
    </string>
    <string name="requirements_list1">- Be at least 17 years old</string>
    <string name="requirements_list2">- Be in good health generally and feel well on the day of donation</string>
    <string name="requirements_list3">- Weigh at least 110 pounds</string>
    <string name="requirements_list4">- If you have received the COVID vaccine, please wait 3 days before attempting to donate</string>
    <string name="requirements_list5">- Have received the second dose of the Covid-19 vaccine</string>
    <string name="donation_event">Donation Event</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="stand_by_donor">Stand-by-Donor</string>
    <string name="stand_by_donor_des">Only verified account can be a Stand-by-Donor. If you activate this feature, you will be an active blood donor and people can see you from the ‘Look from blood donor’ page</string>
    <string name="my_donor_req">My Donor Request</string>
    <string name="language_setting">Language Setting</string>
    <string name="contact_us">Contact Us</string>
    <string name="about">About Redmine</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_detail">User Detail</string>
    <string name="save">Save</string>
    <string name="discard_changes">Discard changes</string>
    <string name="unsaved_changes">Unsaved changes</string>
    <string name="verify_account">Verify account</string>
    <string name="verify_account2">Verify Account</string>
    <string name="edit_password">Edit password</string>
    <string name="your_account_not_verified_yet">Your account is not verified yet. Please verify you account in order to be in the list of eligible blood donors</string>
    <string name="donor_detail">Donor Detail</string>
    <string name="only_verified_user">Only people with verified account will be shown in the list</string>
    <string name="blood_bags">Blood bags</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="post">Post</string>
    <string name="note">Only people with verified accounts will be shown in the list of blood donors. We only show you Standby Donors, who are eligible to donate their blood. However, it is possible that the data has not been updated. So please contact them to confirm their availability and eligibility.</string>
    <string name="blood_donor">Blood Donor</string>
    <string name="blood_type2">Blood Type</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_required">Email is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="name_required">Name is required</string>
    <string name="password_required">Password is required</string>
    <string name="pass_length">Password must be 6 characters long</string>
    <string name="cpass_required">Confirm password is required</string>
    <string name="pass_not_match">Password not match</string>
    <string name="input_email">Please input your email</string>
    <string name="input_pass">Please input your password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="input_phone_number"> Please input your phone number</string>
    <string name="phone_number_length_invalid"> Phone number length is invalid</string>
    <string name="max_blood_bag">Maximum number of blood bag is 5</string>
    <string name="hospital_name_required">Hospital name is required</string>
    <string name="des_required">Description is required</string>
    <string name="des_max_length">Description maximum length is 200</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="jul">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="des">Des</string>
    <string name="default_web_client_id_2">258219025820-3k9ujvcg1l9ag047uij8397miod3qr7e.apps.googleusercontent.com</string>
    <string name="email_verification">Email Verification</string>
    <string name="we_have_sent_you_the_code">We have sent the code to your email</string>
    <string name="please_input_bellow">Please input it bellow</string>
    <string name="delete">Delete</string>
    <string name="load_web_success">Website loaded successfully</string>
    <string name="load_web">Loading website...</string>
    <string name="web_url">https://www.redcrossblood.org/donate-blood/how-to-donate/eligibility-requirements.html</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="input_picture">Please input yg ID card photo</string>
    <string name="uid_null">Can not verify account</string>
    <string name="choose_picture">Choose picture</string>
    <string name="deleted">Deleted</string>
    <string name="yey_success">Yey success 😍</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="hey_careful">Hey careful</string>
    <string name="please_enter_data_correctly">Please enter you data correctly</string>
    <string name="verification_successful">Verification successful!!</string>
    <string name="code_invalid">Code invalid</string>
    <string name="save_changes">Are you sure you want to save any changes?</string>
    <string name="leave_without_saving">Are you sure you want to leave without saving?</string>
    <string name="sent">Sent</string>
    <string name="request">Request</string>
    <string name="sure_sign_out">Are you sure you want to sign out?</string>
    <string name="msg_delete_donor_req">Donor request is successfully deleted!</string>
    <string name="msg_donor_req_posted">Donor request is successfully posted!</string>
    <string name="failed_to_deleted">Failed to delete donor request</string>
    <string name="failed_to_post_donor_req">Failed to post donor request</string>
    <string name="msg_account_registered">Your account is successfully registered!</string>
    <string name="msg_failed_to_register">Failed to register user</string>
    <string name="msg_login_successfully">Login successfully</string>
    <string name="msg_email_pass_might_be_wrong">Email or password might be wrong</string>
</resources>