<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.detaildonorreq.CanDonateBloodFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_can_donate"
        android:layout_width="358dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                style="@style/TitleTextBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_sure_meet_requirements" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/requirements_list1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/requirements_list2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/requirements_list3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/requirements_list4" />

            <TextView
                android:id="@+id/bt_more_info"
                style="@style/TitleTextBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/more_info"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/bt_yes_im_sure"
                style="@style/TitleTextBold"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/red"
                android:text="@string/yes_im_sure"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</FrameLayout>