<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.donordata.FirstDonorDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            style="@style/HeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:singleLine="false"
            android:text="@string/halo" />

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:clipToPadding="false"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/gender" />

        <RadioGroup
            android:id="@+id/rg_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingTop="10dp"
            android:paddingEnd="28dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:layout_width="169dp"
                android:layout_height="55dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/male"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="169dp"
                android:layout_height="55dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/female"
                android:textColor="@drawable/radio_text_selector" />
        </RadioGroup>

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/blood_type" />

        <RadioGroup
            android:id="@+id/rg_bloodType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingTop="10dp"
            android:paddingEnd="28dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/a"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/b"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/ab"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="69dp"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/o"
                android:textColor="@drawable/radio_text_selector" />
        </RadioGroup>

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/rhesus" />

        <RadioGroup
            android:id="@+id/rg_rhesus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingTop="10dp"
            android:paddingEnd="28dp"
            android:paddingBottom="10dp">

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/positive"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/negative"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/dont_know"
                android:textColor="@drawable/radio_text_selector" />

        </RadioGroup>

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/phone_number" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:paddingStart="28dp"
            android:paddingEnd="28dp">

            <TextView
                style="@style/SubHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:errorIconTint="@color/red"
                app:helperText=""
                app:hintEnabled="false">
                <EditText
                    android:background="@android:color/transparent"
                    android:id="@+id/et_phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:outlineSpotShadowColor="@color/red" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="28dp"
            android:paddingEnd="28dp"
            android:text="@string/by_inputing_phone_number" />


        <Button
            android:id="@+id/bt_continue"
            android:layout_width="358dp"
            android:layout_height="55dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="28dp"
            android:backgroundTint="@color/blue"
            android:text="@string/continuee"
            style="@style/SubHeaderTextBold"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>
</ScrollView>