<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.donordata.SecondDonorDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            style="@style/HeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:singleLine="false"
            android:text="@string/halo" />

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/province_residence" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pick_province"
            style="@style/cardViewStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp">

            <TextView
                android:background="@drawable/cv_white_selector"
                style="@style/SubHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:alpha="0.6"
                android:text="@string/province"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>
        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/city_residence" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pick_city"
            style="@style/cardViewStyle"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp">

            <TextView
                android:background="@drawable/cv_white_selector"
                style="@style/SubHeaderText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:alpha="0.6"
                android:text="@string/city"
                android:textAlignment="center" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/have_you_donate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/you_can_only_donate" />


        <RadioGroup
            android:id="@+id/rg_have_you_donate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/margin_start_end"
            android:paddingBottom="10dp">

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@drawable/radio_text_selector" />
        </RadioGroup>

        <TextView
            style="@style/SubHeaderTextBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:clipToPadding="false"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/have_you_had_covid" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingEnd="@dimen/margin_start_end"
            android:text="@string/you_can_only_donate_covid_ver" />


        <RadioGroup
            android:id="@+id/rg_have_you_had_covid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="@dimen/margin_start_end"
            android:paddingTop="10dp"
            android:paddingEnd="@dimen/margin_start_end"
            android:paddingBottom="10dp">

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginEnd="13dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/yes"
                android:textColor="@drawable/radio_text_selector" />

            <RadioButton
                android:layout_width="69dp"
                android:layout_height="55dp"
                android:layout_marginStart="14dp"
                android:layout_weight="1"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:gravity="center"
                android:text="@string/no"
                android:textColor="@drawable/radio_text_selector" />

        </RadioGroup>


        <Button
            android:id="@+id/bt_finish"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="@dimen/margin_start_end"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/margin_start_end"
            android:backgroundTint="@color/blue"
            android:text="@string/finish"
            style="@style/TitleText"
            android:textColor="@color/white"
            android:textAllCaps="false" />
    </LinearLayout>


</ScrollView>